# ai-security-agent-rc1

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml
config/: __init__.py  config.yaml.example  loader.py  (+3 more)
management_server/: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  PRODUCTION_GUIDE.md  README.md  alembic.ini  pyproject.toml
management_server/config/policies/: default.yaml  development.yaml  game_server.yaml  high_security.yaml  low_priority.yaml  production.yaml
management_server/config/routing/: default.yaml
management_server/deployment/: ai-security-management.service
management_server/deployment/nginx/: api.yourotserver.com.http.conf  api.yourotserver.com.ssl.conf
management_server/migrations/: env.py
management_server/migrations/postgres/: 001_initial.sql
management_server/migrations/sqlite/: 001_initial.sql
management_server/scripts/: deploy-https.sh  install-management.sh
management_server/src/discord_bot/: api_client.py  client.py  config.py  exceptions.py  guild_manager.py  main.py  metrics.py  permissions.py  renderer.py  status.py  threads.py
management_server/src/management_server/: __main__.py  app.py  version.py
management_server/src/management_server/api/: __init__.py  audit.py  commands.py  configsync.py  discord.py  errors.py  heartbeat.py  logs.py  notifications.py  pairing.py  policies.py  registration.py  routes.py  routing.py
management_server/src/management_server/audit/: event.py  exceptions.py  exporter.py  manager.py  metrics.py  models.py  repository.py  retention.py  schemas.py  service.py  validator.py
management_server/src/management_server/commands/: authorization.py  exceptions.py  lifecycle.py  manager.py  metrics.py  models.py  queue.py  repository.py  schemas.py  serializer.py  service.py  validator.py
management_server/src/management_server/config/: __init__.py  settings.py
management_server/src/management_server/configsync/: exceptions.py  lifecycle.py  manager.py  metrics.py  models.py  repository.py  schemas.py  service.py  validator.py
management_server/src/management_server/database/: __init__.py  backend.py  base.py  dialect.py  exceptions.py  migrations.py  models.py  session.py
management_server/src/management_server/discord/: __init__.py  exceptions.py  manager.py  metrics.py  models.py  repository.py  schemas.py  service.py  validators.py
management_server/src/management_server/health/: __init__.py  emergency.py  models.py  shutdown.py  startup.py  supervisor.py  worker_supervisor.py
management_server/src/management_server/heartbeat/: __init__.py  exceptions.py  manager.py  metrics.py  models.py  protocol.py  repository.py  schemas.py  service.py  validator.py
management_server/src/management_server/logging/: compression.py  exceptions.py  formatter.py  manager.py  metrics.py  models.py  reports.py  retention.py  rotation.py  service.py  writer.py
management_server/src/management_server/machines/: __init__.py  exceptions.py  identity.py  manager.py  metrics.py  models.py  registry.py  repository.py  schemas.py  service.py  state_machine.py
management_server/src/management_server/notifications/: adapters.py  dispatcher.py  exceptions.py  formatter.py  manager.py  metrics.py  models.py  queue.py  repository.py  schemas.py  service.py  validator.py
management_server/src/management_server/pairing/: __init__.py  exceptions.py  generator.py  manager.py  metrics.py  models.py  repository.py  schemas.py  service.py  validator.py
management_server/src/management_server/policies/: exceptions.py  inheritance.py  loader.py  manager.py  metrics.py  models.py  repository.py  schemas.py  service.py  validator.py
management_server/tests/: conftest.py  test_api.py  test_audit.py  test_certificates.py  test_commands.py  test_configsync.py  test_database.py  test_discord.py  test_discord_bot.py  test_health.py  test_heartbeat.py  test_logging.py  test_machines.py  test_notifications.py  test_pairing.py  test_policies.py  test_routing.py  test_startup.py
(+203 files in other folders)
