[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-security-agent"
version = "0.1.0"
description = "Intelligent real-time Linux security agent"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "AI Security Agent Contributors"},
]

dependencies = [
    "PyYAML>=6.0",
    "structlog>=24.0",
    "aiosqlite>=0.20",     # Phase 15: async SQLite database
    "aiofiles>=24.0",      # Phase 7-8: async file monitoring
    "aiohttp>=3.9",        # Phase 16: Discord alerts, HTTP requests
]

homepage = "https://github.com/joelslamospersson/ai-security-agent-rc1"
repository = "https://github.com/joelslamospersson/ai-security-agent-rc1"

[project.scripts]
security-agent = "security_agent.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "psutil>=6.0",          # Phase 14: system metrics
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["security_agent*"]

[tool.pytest.ini_options]
markers = ["benchmark: performance benchmark tests"]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
explicit_package_bases = true
disallow_any_unimported = false
ignore_missing_imports = true
exclude = ["tests/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.coverage.run]
source = ["security_agent"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if False:",
    "pragma: no cover",
]
