[build-system]
requires = ["setuptools>=74.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-security-management-server"
version = "0.1.0"
description = "Management Server for AI Security Agent"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [{name = "AI Security Agent Contributors"}]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.28",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "python-dateutil>=2.8",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "gunicorn>=22.0",
]

[project.urls]
homepage = "https://github.com/joelslamospersson/ai-security-agent-rc1"
repository = "https://github.com/joelslamospersson/ai-security-agent-rc1"

[project.scripts]
management-server = "management_server.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.13",
    "ruff>=0.7",
    "httpx>=0.28",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["management_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["management_server"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if False:",
    "pragma: no cover",
]
